; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_mmap.c___vma_link.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_mmap.c___vma_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mm_struct = type { i32 }
%struct.vm_area_struct = type { i32 }
%struct.rb_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mm_struct*, %struct.vm_area_struct*, %struct.vm_area_struct*, %struct.rb_node**, %struct.rb_node*)* @__vma_link to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__vma_link(%struct.mm_struct* %0, %struct.vm_area_struct* %1, %struct.vm_area_struct* %2, %struct.rb_node** %3, %struct.rb_node* %4) #0 {
  %6 = alloca %struct.mm_struct*, align 8
  %7 = alloca %struct.vm_area_struct*, align 8
  %8 = alloca %struct.vm_area_struct*, align 8
  %9 = alloca %struct.rb_node**, align 8
  %10 = alloca %struct.rb_node*, align 8
  store %struct.mm_struct* %0, %struct.mm_struct** %6, align 8
  store %struct.vm_area_struct* %1, %struct.vm_area_struct** %7, align 8
  store %struct.vm_area_struct* %2, %struct.vm_area_struct** %8, align 8
  store %struct.rb_node** %3, %struct.rb_node*** %9, align 8
  store %struct.rb_node* %4, %struct.rb_node** %10, align 8
  %11 = load %struct.mm_struct*, %struct.mm_struct** %6, align 8
  %12 = load %struct.vm_area_struct*, %struct.vm_area_struct** %7, align 8
  %13 = load %struct.vm_area_struct*, %struct.vm_area_struct** %8, align 8
  %14 = load %struct.rb_node*, %struct.rb_node** %10, align 8
  %15 = call i32 @__vma_link_list(%struct.mm_struct* %11, %struct.vm_area_struct* %12, %struct.vm_area_struct* %13, %struct.rb_node* %14)
  %16 = load %struct.mm_struct*, %struct.mm_struct** %6, align 8
  %17 = load %struct.vm_area_struct*, %struct.vm_area_struct** %7, align 8
  %18 = load %struct.rb_node**, %struct.rb_node*** %9, align 8
  %19 = load %struct.rb_node*, %struct.rb_node** %10, align 8
  %20 = call i32 @__vma_link_rb(%struct.mm_struct* %16, %struct.vm_area_struct* %17, %struct.rb_node** %18, %struct.rb_node* %19)
  ret void
}

declare dso_local i32 @__vma_link_list(%struct.mm_struct*, %struct.vm_area_struct*, %struct.vm_area_struct*, %struct.rb_node*) #1

declare dso_local i32 @__vma_link_rb(%struct.mm_struct*, %struct.vm_area_struct*, %struct.rb_node**, %struct.rb_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
